Finalizando endpoint de solicitacao de cartao